Avoid linebreaks in infoxbox amounts
This is for https://phabricator.wikimedia.org/T182301

--- a/skins/cat17/src/sass/layouts/_introduction.scss
+++ b/skins/cat17/src/sass/layouts/_introduction.scss
@@ -47,10 +47,15 @@
 	top: 1.5em;
 	line-height: 1.4em;
 	margin-top: 1em;
-}
 
-.introduction-banner a {
-	color: $brand-primary;
-	display: inline-block;
-	margin-left: 1em;
+	a {
+		color: $brand-primary;
+		display: inline-block;
+		margin-left: 1em;
+	}
+
+	/* Avoid line breaks between amount and euro sign */
+	.amount {
+		white-space: nowrap;
+	}
 }
